Increase .ic-arrow_jump-to-section margin-left to fix alignment

--- a/src/scss/utilities/_svg-icons.scss
+++ b/src/scss/utilities/_svg-icons.scss
@@ -66,5 +66,5 @@
 .ic-arrow_jump-to-section {
 	vertical-align: baseline;
 	transform: rotate(-45deg) translateX(-0.6rem);
-	margin-left: 2px;
+	margin-left: 0.25rem;
 }
